Major changes between version 0.98.2 and 0.98.4.
------------------------------------------------
  - If the lock option is specified we create a device lock
    for incoming devices if one does not already exist. This is
    because newer versions of the kernel ISDN code appear to bounce
    an existing connection if we attempt to dial an in-use ipppd
    device whereas previously it returned an error.
  - Use -defaultroute rather than nodefaultroute since pppd 2.2
    does not understand nodefaultroute.
  - Fix for compilation on Linux 2.0.x.

Major changes between version 0.98.2 and 0.98.3.
------------------------------------------------
  - Search for ip,route,ifconfig,bootpc in /bin and /usr/bin as
    well as /sbin and /usr/sbin.
  - Fixed the bug that prevented -daemon mode from working.
  - "diald -V", "diald -v" or "diald --version" simply prints the
    version number and exits. (I've even remembered to change the
    number in version.h finally!)
  - pppd is spawned with the nodefaultroute argument on its command
    line to avoid breakage with some systems which appear to put
    a defaultroute in pppd's global options file.
  - Added options to select either the new ethertap proxy code or
    the old slip proxy code in the Makefile. The Makefile will
    now complain if the config settings have not been set before
    compiling.
  - Added a fixwrappers script to remove bogus setenv stuff from
    the tcp_wrappers library if it exists.
  - Set the initial log level to LOG_INFO for monitors that connect
    without giving an explicit monitor setting.
  - Changes for compatibility with glibc 2.1.
  - Fixed a typo in modem.c that prevented non-/dev devices
    from working.
  - More major routing stuff. We now rely mainly on adding and
    removing addresses on interfaces. We still add the p-t-p
    routes for compatibility with 2.0 kernels (with 2.2 you
    get double routes but it isn't particularly important).